Update the inventory layout to match the ingame inventory. Started playing with the fx:root FXML construct to see if it may fix some layout issues.

--- a/gw2-sab/res/com/bouye/gw2/sab/styles/scene/characters/inventory/InventoryPane.css
+++ b/gw2-sab/res/com/bouye/gw2/sab/styles/scene/characters/inventory/InventoryPane.css
@@ -1,5 +1,6 @@
 .inventory-pane {
     -fx-padding: 6px;
+    -fx-spacing: 6px;
 }
 .inventory-pane .bag {
 }
@@ -26,8 +27,9 @@
     -fx-background-color: derive(-slot-inner, 50%);
 }
 .inventory-pane .top-bar {
+    -fx-border-color: null;
+    -fx-padding: 0px;
     -fx-spacing: 6px;
-    -fx-padding: 0px 0px 6px 0px;
     -fx-alignment: center-left;
 }
 .inventory-pane .options-button {
